fix (column-block): fix horizontal scrolling when content align is applied on the block

--- a/src/block/column/style.scss
+++ b/src/block/column/style.scss
@@ -1,7 +1,7 @@
 @import "common";
 
 .stk-block.stk-block-column .stk-column-wrapper {
-	width: 100%;
+	width: auto;
 }
 .stk-block-column__content {
 	box-sizing: border-box;
